--- a/Localization/zh-Hans.lang
+++ b/Localization/zh-Hans.lang
@@ -47,9 +47,23 @@ saviourstatus1= 拯救者，生命偷取！
 saviourstatus-1= 拯救者，斩杀敌人！
 Talk.NewHistory01=新的历史中，没有你
 Talk.NewHistory02=新的历史中不再有你
-Talk.NewHistory03=新的历史中没有你。
+Talk.NewHistory03=新的历史中并没有你。
 Talk.GoForTheEyes= 攻击要害！
 Talk.CritalAttacks= 致命一击！
+Talk.Attack03= 加大火力！
+Talk.Attack04= 看剑！
+Talk.Attack05= 再来一次！
+Talk.Attack06=去吧
+Talk.Respawn01=我回来了
+Talk.Respawn02=我，又回来了
+Talk.Respawn03=......已经有一段时间了
+Talk.Respawn04=没到放弃的时候
+Talk.Respawn05=这种感觉...其实不好
+Talk.Die01=为什么
+Talk.Die02=又一次
+Talk.Die03=新的历史中，有我吗
+Talk.Die04=算你走运
+Talk.Die05=你等着吧
 Talk.AtkSkelBoss=我在解救你！
 Talk.LowHlthAtkSkelBoss=你可得好好谢谢我
 BossTk.SkelBoss01=救救我！
