--- a/Localization/zh-Hans.lang
+++ b/Localization/zh-Hans.lang
@@ -9,12 +9,12 @@ ItemTooltip.Mega=66%的几率不消耗弹药\n“是时候做个了断了。”\
 ItemName.Ultimate_Star=破•最终星辰
 ItemTooltip.Ultimate_Star=集星辉以为子弹，穿透一切敌人
 ItemName.Lightning=转化增幅器
-ItemTooltip.Lightning=增加16%伤害\n增加8%暴击\n静止不动上述效果翻倍\n增加100点最大生命值\n佩戴者移动速度大幅增加\n允许玩家双击同一方向以瞬移
+ItemTooltip.Lightning=增加16%伤害\n增加8%暴击\n静止不动上述效果翻倍\n增加2召唤物上限\n增加100点最大生命值\n佩戴者移动速度大幅增加\n允许玩家双击同一方向以瞬移
 ItemName.Meteower=流星雨爆发
 ItemTooltip.Meteower=每次攻击施放15个流星\n流星可穿透敌人16点防御力
 ItemName.TimeTravelingPotion=回溯药水
 ItemTooltip.TimeTravelingPotion=回到两秒前\n四秒钟冷却时间\n默认快捷键：Q
-NPCName.Core=革命性引擎之核心
+NPCName.Core=革命性引擎核心
 ItemName.SaviourBreastplate=拯救者胸甲
 ItemName.SaviourLeggings=拯救者护腿
 ItemName.SaviourRanged=拯救者头盔
@@ -34,6 +34,7 @@ ArmorSetBonus.Summon=S
 ItemName.LightArrow=光矢
 ItemName.ThunderBlade=电光雷鸣刃
 ItemName.SLR=断裂号令剑
+ItemName.MtwerBP=流星雨爆发蓝图
 Starflare:=星辉：
 Corepower:=能量：
 Mega1=选择了额外弹药
@@ -41,7 +42,7 @@ Mega2=单独选择了右侧额外弹药
 Mega3=清除了额外弹药
 CannotTPto=目标位置不合法
 ItemName.WdPlatGen=世界平台生成器
-ItemName.Throw2Brk=破坏
+ItemName.Throw2Brk=快速破坏
 ItemName.ClearByX=清除一行
 saviourstatus1= 拯救者，生命偷取！
 saviourstatus-1= 拯救者，斩杀敌人！
@@ -59,11 +60,45 @@ Talk.Respawn02=我，又回来了
 Talk.Respawn03=......已经有一段时间了
 Talk.Respawn04=没到放弃的时候
 Talk.Respawn05=这种感觉...其实不好
+Talk.Respawn06=如果能回到过去，我或许不会这么做
 Talk.Die01=为什么
 Talk.Die02=又一次
 Talk.Die03=新的历史中，有我吗
 Talk.Die04=算你走运
 Talk.Die05=你等着吧
+Talk.Die06= 你以为你是谁？灾祸吗？命运吗？终究会被我踩在脚下！
+Talk.Die07=结束了...吗
+Talk.Sparkle01=过去...我们犹如雨中泪水，消失了，不留一丝痕迹
+Talk.Sparkle02= 这......就是“新的历史”吗？
+Talk.Sparkle03=太慢了。你应该再请教请教琅
+Talk.Sparkle04= 璇没有教过你这个吗？
+Talk.Sparkle05=看来你没有听珖的建议
+Talk.Sparkle06=改天再试试
+Talk.Sparkle07= 换个新把戏！
+Talk.Sparkle08=汇聚星光一一
+Talk.Sparkle09=聚集星辉一一
+Talk.Sparkle10= 燃起星辉！
+Talk.Sparkle11= 燃起最后一颗星！
+Talk.Sparkle12= 燃尽最后一颗星！
+Talk.Sparkle13=我比你更强
+Talk.Sparkle14=你无法击败我
+Talk.Sparkle15=你不用知道我是谁。如果你坚持要问
+Talk.Sparkle16=我只能说，我的名字，是璨
+Talk.Sparkle17=你们会嘲笑我们吧？这其实无所谓。
+Talk.Sparkle18= 一定，一定要慎用月亮的力量！
+Talk.Sparkle19= 月亮上的那些人......不可接触。
+Talk.Sparkle20= 中断迷茫！
+Talk.Sparkle21= 终结遗憾！
+Talk.Sparkle22= 快要结束了......
+Talk.Sparkle23= 看来已经结束了
+Talk.Sparkle24= 他们......直到现在还在摸鱼
+Talk.Sparkle25= 再见
+Talk.Sparkle26=
+Talk.Sparkle27=
+Talk.Sparkle28=
+Talk.Sparkle29=
+Talk.Sparkle30=
+Talk.Sparkle31=
 Talk.AtkSkelBoss=我在解救你！
 Talk.LowHlthAtkSkelBoss=你可得好好谢谢我
 BossTk.SkelBoss01=救救我！
