--- a/Localization/zh-Hans.lang
+++ b/Localization/zh-Hans.lang
@@ -33,8 +33,12 @@ ArmorSetBonus.Melee=Me
 ArmorSetBonus.Summon=S
 ItemName.LightArrow=光矢
 ItemName.ThunderBlade=电光雷鸣刃
+ItemName.SummonEvolutionaries=进化者召唤杖
 ItemName.SLR=断裂号令剑
 ItemName.MtwerBP=流星雨爆发蓝图
+ItemName.FireThrow1=火花喷射器
+ItemName.FireThrow2=熔岩喷射器
+ItemName.FireThrow3=霜焰喷射器
 Starflare:=星辉：
 Corepower:=能量：
 Mega1=选择了额外弹药
