--- a/Localization/zh-Hans.lang
+++ b/Localization/zh-Hans.lang
@@ -24,9 +24,9 @@ ItemName.SaviourSummon=拯救者面具
 ItemTooltip.SaviourBreastplate=所有伤害增加2%
 ItemTooltip.SaviourLeggings=移动速度增加15%
 ItemTooltip.SaviourRanged=远程伤害增加60%\n远程暴击率增加40%
-ItemTooltip.SaviourMagic=魔法伤害增加40%\n魔法暴击率增加25%\n最大魔力增加120
+ItemTooltip.SaviourMagic=巨额防御\n魔法伤害增加40%\n魔法暴击率增加25%\n最大魔力增加120
 ItemTooltip.SaviourMelee=近战伤害和攻击速度增加20%\n近战暴击率增加20%
-ItemTooltip.SaviourSummon=仆从伤害增加40%\n最大仆从数量增加7个
+ItemTooltip.SaviourSummon=巨额防御\n召唤物伤害增加40%\n最大召唤物数量增加7个
 ArmorSetBonus.Ranged=R
 ArmorSetBonus.Magic=Ma
 ArmorSetBonus.Melee=Me
@@ -48,8 +48,8 @@ CannotTPto=目标位置不合法
 ItemName.WdPlatGen=世界平台生成器
 ItemName.Throw2Brk=快速破坏
 ItemName.ClearByX=清除一行
-saviourstatus1= 拯救者，生命偷取！
-saviourstatus-1= 拯救者，斩杀敌人！
+saviourstatus1= 套装效果：生命偷取
+saviourstatus-1= 套装效果：额外伤害
 Talk.NewHistory01=新的历史中，没有你
 Talk.NewHistory02=新的历史中不再有你
 Talk.NewHistory03=新的历史中并没有你。
@@ -59,12 +59,19 @@ Talk.Attack03= 加大火力！
 Talk.Attack04= 看剑！
 Talk.Attack05= 再来一次！
 Talk.Attack06=去吧
+Talk.Attack07=碾碎你
 Talk.Respawn01=我回来了
 Talk.Respawn02=我，又回来了
 Talk.Respawn03=......已经有一段时间了
 Talk.Respawn04=没到放弃的时候
 Talk.Respawn05=这种感觉...其实不好
 Talk.Respawn06=如果能回到过去，我或许不会这么做
+Talk.Respawn07=什么时候才能结束
+Talk.Respawn08=每天都会这样
+Talk.Respawn09=又来了......
+Talk.Respawn10=怎么才能打破这梦魇般的循环
+Talk.Respawn11=还有续集呢...哈哈哈
+Talk.Respawn12= 等着吧！
 Talk.Die01=为什么
 Talk.Die02=又一次
 Talk.Die03=新的历史中，有我吗
@@ -72,6 +79,17 @@ Talk.Die04=算你走运
 Talk.Die05=你等着吧
 Talk.Die06= 你以为你是谁？灾祸吗？命运吗？终究会被我踩在脚下！
 Talk.Die07=结束了...吗
+Talk.Die08=天堂.......已经浮现在我的眼前
+Talk.Die09=终于获得解脱
+Talk.Die10=这就是我的结局吧
+Talk.Die11=新的历史中，也没有我
+Talk.Die12=哈哈哈哈哈哈哈
+Talk.Die13= 沉醉于虚假的世界里！......
+Talk.Die14= 结束了。
+Talk.Dark01=真黑啊
+Talk.Dark02=伸手不见五指
+Talk.Dark03=你是谁？
+Talk.Dark04=你别过来
 Talk.Sparkle01=过去...我们犹如雨中泪水，消失了，不留一丝痕迹
 Talk.Sparkle02= 这......就是“新的历史”吗？
 Talk.Sparkle03=太慢了。你应该再请教请教琅
@@ -93,20 +111,14 @@ Talk.Sparkle18= 一定，一定要慎用月亮的力量！
 Talk.Sparkle19= 月亮上的那些人......不可接触。
 Talk.Sparkle20= 中断迷茫！
 Talk.Sparkle21= 终结遗憾！
-Talk.Sparkle22= 快要结束了......
-Talk.Sparkle23= 看来已经结束了
-Talk.Sparkle24= 他们......直到现在还在摸鱼
-Talk.Sparkle25= 再见
-Talk.Sparkle26=
-Talk.Sparkle27=
-Talk.Sparkle28=
-Talk.Sparkle29=
-Talk.Sparkle30=
-Talk.Sparkle31=
+Talk.Sparkle22=快要结束了......
+Talk.Sparkle23=看来已经结束了
+Talk.Sparkle24=他们......直到现在还在摸鱼
+Talk.Sparkle25=再见
 Talk.AtkSkelBoss=我在解救你！
 Talk.LowHlthAtkSkelBoss=你可得好好谢谢我
-BossTk.SkelBoss01=救救我！
-BossTk.SkelBoss02=趁现在，快
+Talk.SkelBoss01=救救我！
+Talk.SkelBoss02=趁现在，快
 Talk.DftSkelBoss=最终，他获得了解脱
 Talk.AtkCthuEyes=真是个大眼睛
 Talk.DftCthuEyes=它的眼神让我毛骨悚然
@@ -120,4 +132,24 @@ Talk.CoruBiome03=别过来
 Talk.CoruBallBrk=这球里竟然真有奥秘
 Talk.CrimBossApr=有什么要来了
 Talk.CoruBossApr=好像有什么在蠕动
+Talk.DkFsion01=你可别让我把你给逮着了
+Talk.DkFsion02=虽然我不是人
+Talk.DkFsion03=给我爬
+Talk.DkFsion04=还跑！还跑
+Talk.DkFsion05=你可真是活泼好动
+Talk.DkFsion06=但你是真的狗
+Talk.Plantera01=SHOWDOWN SHOOTOUT SPREAD FEAR WITHIN WITHOUT
+Talk.Plantera02=PLANTERA THE GREAT SOUTHERN PLANT
+Talk.Slime1=我蹦
+Talk.Slime2=我跳
+Talk.Slime3=这样很好玩
+Talk.Slime4=就喜欢这样跳
+Talk.Slime5=太阳晒得好暖和
+Talk.Slime6=你说这样其实不好玩，我也没办法。因为我只能跳。
+Talk.Zombie1=同化你们
+Talk.Zombie2=预算90，配什么好
+Talk.Zombie3=死亡如风，常伴吾身
+Talk.Zombie4=我从前特别喜欢手榴弹
+Talk.Zombie5=地下有陷阱
+Talk.Zombie6=你和我们不一样
 
