--- a/Localization/zh-Hans.lang
+++ b/Localization/zh-Hans.lang
@@ -34,6 +34,7 @@ ArmorSetBonus.Summon=S
 ItemName.LightArrow=光矢
 ItemName.ThunderBlade=电光雷鸣刃
 ItemName.SummonEvolutionaries=进化者召唤杖
+ItemName.ThunderWeaponMagic=雷电
 ItemName.SLR=断裂号令剑
 ItemName.MtwerBP=流星雨爆发蓝图
 ItemName.FireThrow1=火花喷射器
