--- a/Localization/zh-Hans.lang
+++ b/Localization/zh-Hans.lang
@@ -147,10 +147,5 @@ Talk.Slime3=这样很好玩
 Talk.Slime4=就喜欢这样跳
 Talk.Slime5=太阳晒得好暖和
 Talk.Slime6=你说这样其实不好玩，我也没办法。因为我只能跳。
-Talk.Zombie1=同化你们
-Talk.Zombie2=预算90，配什么好
-Talk.Zombie3=死亡如风，常伴吾身
-Talk.Zombie4=我从前特别喜欢手榴弹
-Talk.Zombie5=地下有陷阱
-Talk.Zombie6=你和我们不一样
+Talk.taishuaile=这个Logo太帅了
 
