--- a/Localization/zh-Hans.lang
+++ b/Localization/zh-Hans.lang
@@ -134,11 +134,8 @@ Talk.CoruBallBrk=这球里竟然真有奥秘
 Talk.CrimBossApr=有什么要来了
 Talk.CoruBossApr=好像有什么在蠕动
 Talk.DkFsion01=你可别让我把你给逮着了
-Talk.DkFsion02=虽然我不是人
-Talk.DkFsion03=给我爬
-Talk.DkFsion04=还跑！还跑
-Talk.DkFsion05=你可真是活泼好动
-Talk.DkFsion06=但你是真的狗
+Talk.DkFsion02=算你走运
+Talk.DkFsion03=跑的真快
 Talk.Plantera01=SHOWDOWN SHOOTOUT SPREAD FEAR WITHIN WITHOUT
 Talk.Plantera02=PLANTERA THE GREAT SOUTHERN PLANT
 Talk.Slime1=我蹦
