--- a/Localization/zh-Hans.lang
+++ b/Localization/zh-Hans.lang
@@ -135,7 +135,7 @@ Talk.CrimBossApr=有什么要来了
 Talk.CoruBossApr=好像有什么在蠕动
 Talk.DkFsion01=你可别让我把你给逮着了
 Talk.DkFsion02=算你走运
-Talk.DkFsion03=跑的真快
+Talk.DkFsion03=跑得真快
 Talk.Plantera01=SHOWDOWN SHOOTOUT SPREAD FEAR WITHIN WITHOUT
 Talk.Plantera02=PLANTERA THE GREAT SOUTHERN PLANT
 Talk.Slime1=我蹦
