--- a/Localization/zh-Hans.lang
+++ b/Localization/zh-Hans.lang
@@ -42,6 +42,8 @@ ItemName.FireThrow2=熔岩喷射器
 ItemName.FireThrow3=霜焰喷射器
 Starflare:=星辉：
 Corepower:=能量：
+cetip =能量能让你获得一些特殊效果
+sftip =星辉用于使用星辉类别的物品
 Mega1=选择了额外弹药
 Mega2=单独选择了右侧额外弹药
 Mega3=清除了额外弹药
@@ -85,7 +87,7 @@ Talk.Die09=终于获得解脱
 Talk.Die10=这就是我的结局吧
 Talk.Die11=新的历史中，也没有我
 Talk.Die12=哈哈哈哈哈哈哈
-Talk.Die13= 沉醉于虚假的世界里！......
+Talk.Die13= 沉醉于虚假的世界！......
 Talk.Die14= 结束了。
 Talk.Dark01=真黑啊
 Talk.Dark02=伸手不见五指
