--- a/Localization/zh-Hans.lang
+++ b/Localization/zh-Hans.lang
@@ -11,7 +11,9 @@ ItemTooltip.Ultimate_Star=集星辉以为子弹，穿透一切敌人
 ItemName.Lightning=转化增幅器
 ItemTooltip.Lightning=增加16%伤害\n增加8%暴击\n静止不动上述效果翻倍\n增加2召唤物上限\n增加100点最大生命值\n佩戴者移动速度大幅增加\n允许玩家双击同一方向以瞬移
 ItemName.Meteower=流星雨爆发
+ItemName.LeavesWand=树叶魔杖
 ItemTooltip.Meteower=每次攻击施放15个流星\n流星可穿透敌人16点防御力
+ItemTooltip.LeavesWand=召唤跟踪的魔法叶片攻击敌人
 ItemName.TimeTravelingPotion=回溯药水
 ItemTooltip.TimeTravelingPotion=回到两秒前\n四秒钟冷却时间\n默认快捷键：Q
 NPCName.Core=革命性引擎核心
@@ -42,8 +44,17 @@ ItemName.FireThrow2=熔岩喷射器
 ItemName.FireThrow3=霜焰喷射器
 Starflare:=星辉：
 Corepower:=能量：
-cetip =能量能让你获得一些特殊效果
-sftip =星辉用于使用星辉类别的物品
+cetip=能量能让你获得一些特殊效果
+sftip=星辉用于使用星辉类别的物品
+UI.RevoSets=Revolutions设置
+UI.BlurTrue=模糊效果：开
+UI.BlurFalse=模糊效果：关
+UI.AutoDoorTrue=自动开关门：开
+UI.AutoDoorFalse=自动开关门：关
+UI.MutterTrue=碎碎念：开
+UI.MutterFalse=碎碎念：关
+UI.AutoReuseTrue=自动挥舞：开
+UI.AutoReuseFalse=自动挥舞：关
 Mega1=选择了额外弹药
 Mega2=单独选择了右侧额外弹药
 Mega3=清除了额外弹药
