--- a/Localization/zh-Hans.lang
+++ b/Localization/zh-Hans.lang
@@ -55,6 +55,11 @@ UI.MutterTrue=碎碎念：开
 UI.MutterFalse=碎碎念：关
 UI.AutoReuseTrue=自动挥舞：开
 UI.AutoReuseFalse=自动挥舞：关
+UI.HealthBarTrue=Boss血条：开
+UI.HealthBarFalse=Boss血条：关
+UI.RangeIndex0=范围指示器：标准
+UI.RangeIndex1=范围指示器：激进
+UI.RangeIndex2=范围指示器：关闭
 Mega1=选择了额外弹药
 Mega2=单独选择了右侧额外弹药
 Mega3=清除了额外弹药
