--- a/Localization/zh-Hans.lang
+++ b/Localization/zh-Hans.lang
@@ -163,4 +163,18 @@ Talk.Slime4=就喜欢这样跳
 Talk.Slime5=太阳晒得好暖和
 Talk.Slime6=你说这样其实不好玩，我也没办法。因为我只能跳。
 Talk.taishuaile=这个Logo太帅了
+Talk.Guide11=今日无事
+Talk.Guide12=风和日丽
+Talk.Guide51=像这样攻击
+Talk.Guide52=用弓对付它
+Talk.Guide21=天快要黑了
+Talk.Guide22=夜幕即将落下
+Talk.Guide23=你作好打算了吗
+Talk.Guide31=外面危险
+Talk.Guide32=小心一点
+Talk.Guide61=兄弟，你背后！
+Talk.Guide41=一路顺风
+Talk.Guide42=祝你成功
+
+
 
