--- a/Localization/zh-Hans.lang
+++ b/Localization/zh-Hans.lang
@@ -39,9 +39,14 @@ ItemName.SummonEvolutionaries=进化者召唤杖
 ItemName.ThunderWeaponMagic=雷电
 ItemName.SLR=断裂号令剑
 ItemName.MtwerBP=流星雨爆发蓝图
-ItemName.FireThrow1=火花喷射器
+ItemName.Treestickblueprint=树叶魔杖蓝图
+ItemName.FireThrow=火花喷射器
 ItemName.FireThrow2=熔岩喷射器
 ItemName.FireThrow3=霜焰喷射器
+ItemName.FireThrow4=咒焰喷射器
+ItemName.FireThrow5=灵液喷射器
+ItemName.FireThrow6=蘑菇喷射器
+ItemName.FireThrow7=星旋喷射器
 Starflare:=星辉：
 Corepower:=能量：
 cetip=能量能让你获得一些特殊效果
