--- a/Localization/zh-Hans.lang
+++ b/Localization/zh-Hans.lang
@@ -65,6 +65,8 @@ UI.HealthBarFalse=Boss血条：关
 UI.RangeIndex0=范围指示器：标准
 UI.RangeIndex1=范围指示器：激进
 UI.RangeIndex2=范围指示器：关闭
+UI.SpColorTrue=特殊颜色（彩蛋）：开
+UI.SpColorFalse=特殊颜色（彩蛋）：关
 Mega1=选择了额外弹药
 Mega2=单独选择了右侧额外弹药
 Mega3=清除了额外弹药
@@ -83,7 +85,8 @@ Talk.Attack03= 加大火力！
 Talk.Attack04= 看剑！
 Talk.Attack05= 再来一次！
 Talk.Attack06=去吧
-Talk.Attack07=碾碎你
+Talk.Attack07= 继续看剑！
+Talk.Attack07= 接着看剑！
 Talk.Respawn01=我回来了
 Talk.Respawn02=我，又回来了
 Talk.Respawn03=......已经有一段时间了
@@ -93,9 +96,7 @@ Talk.Respawn06=如果能回到过去，我或许不会这么做
 Talk.Respawn07=什么时候才能结束
 Talk.Respawn08=每天都会这样
 Talk.Respawn09=又来了......
-Talk.Respawn10=怎么才能打破这梦魇般的循环
-Talk.Respawn11=还有续集呢...哈哈哈
-Talk.Respawn12= 等着吧！
+Talk.Respawn00= 等着吧！
 Talk.Die01=为什么
 Talk.Die02=又一次
 Talk.Die03=新的历史中，有我吗
@@ -103,17 +104,26 @@ Talk.Die04=算你走运
 Talk.Die05=你等着吧
 Talk.Die06= 你以为你是谁？灾祸吗？命运吗？终究会被我踩在脚下！
 Talk.Die07=结束了...吗
-Talk.Die08=天堂.......已经浮现在我的眼前
-Talk.Die09=终于获得解脱
-Talk.Die10=这就是我的结局吧
-Talk.Die11=新的历史中，也没有我
-Talk.Die12=哈哈哈哈哈哈哈
-Talk.Die13= 沉醉于虚假的世界！......
-Talk.Die14= 结束了。
+Talk.Die08= 结束了。
 Talk.Dark01=真黑啊
 Talk.Dark02=伸手不见五指
 Talk.Dark03=你是谁？
 Talk.Dark04=你别过来
+Talk.SfWea1=看星星
+Talk.SfWea2=看星星喽
+Talk.SfWea3= 来看星星！
+Talk.SfWea4= 星光闪耀！
+Talk.SfWea5= 星光，闪耀！
+Talk.SfWea6=一闪一闪亮晶晶
+Talk.SfWea7= 汇聚星光！
+Talk.SfWea8= 燃起星辉！
+Talk.SfWea9=十步杀一人
+Talk.SfWea10=千里不留行
+Talk.SfWea11= 飒沓如流星！
+Talk.SfWea12=闪闪闪闪闪闪闪
+Talk.SfWea13= 继续看星星！
+Talk.SfWea14= 接着看星星！
+Talk.SfWea15= 再来看星星！
 Talk.Sparkle01=过去...我们犹如雨中泪水，消失了，不留一丝痕迹
 Talk.Sparkle02= 这......就是“新的历史”吗？
 Talk.Sparkle03=太慢了。你应该再请教请教琅
