--- a/Localization/zh-Hans.lang
+++ b/Localization/zh-Hans.lang
@@ -1,19 +1,22 @@
 ProjectileName.True_FinaleLight=终末之光
 ProjectileName.FinaleLight=终末光箭
 ProjectileName.FinaleLightAlt=终末光箭
-ProjectileName.MLF=超级定位弹
+ProjectileName.MLF=终极机枪
 ItemName.Finale=终章之弓
-ItemTooltip.Finale=66%的几率不消耗弹药\n“故事结束了。”\命中的第一个敌人周围将会出现额外的光箭
+ItemTooltip.Finale=66%的几率不消耗弹药\n“故事结束了。”\n命中敌人时射出额外的光箭
 ItemName.Mega=终极机枪
 ItemTooltip.Mega=66%的几率不消耗弹药\n“是时候做个了断了。”\n右击来切换额外子弹所用的弹药
 ItemName.Ultimate_Star=破•最终星辰
 ItemTooltip.Ultimate_Star=集星辉以为子弹，穿透一切敌人
+ProjectileName.UltimateStar=最终星辰
 ItemName.Lightning=转化增幅器
 ItemTooltip.Lightning=增加16%伤害\n增加8%暴击\n静止不动上述效果翻倍\n增加2召唤物上限\n增加100点最大生命值\n佩戴者移动速度大幅增加\n允许玩家双击同一方向以瞬移
 ItemName.Meteower=流星雨爆发
-ItemName.LeavesWand=树叶魔杖
-ItemTooltip.Meteower=每次攻击施放15个流星\n流星可穿透敌人16点防御力
-ItemTooltip.LeavesWand=召唤跟踪的魔法叶片攻击敌人
+ProjectileName.Meteower_Meteor=充能流星
+ItemName.LeavesWand=魔法叶
+ItemTooltip.Meteower=每次攻击施放15个充能流星\n流星可穿透敌人16点防御力
+ItemTooltip.LeavesWand=召唤跟踪的魔法叶刃攻击敌人
+ProjectileName.Magicblade=魔法叶刃
 ItemName.TimeTravelingPotion=回溯药水
 ItemTooltip.TimeTravelingPotion=回到两秒前\n四秒钟冷却时间\n默认快捷键：Q
 NPCName.Core=革命性引擎核心
@@ -23,7 +26,7 @@ ItemName.SaviourRanged=拯救者头盔
 ItemName.SaviourMagic=拯救者头饰
 ItemName.SaviourMelee=拯救者重盔
 ItemName.SaviourSummon=拯救者面具
-ItemTooltip.SaviourBreastplate=所有伤害增加2%
+ItemTooltip.SaviourBreastplate=所有伤害增加20%
 ItemTooltip.SaviourLeggings=移动速度增加15%
 ItemTooltip.SaviourRanged=远程伤害增加60%\n远程暴击率增加40%
 ItemTooltip.SaviourMagic=巨额防御\n魔法伤害增加40%\n魔法暴击率增加25%\n最大魔力增加120
@@ -34,12 +37,16 @@ ArmorSetBonus.Magic=Ma
 ArmorSetBonus.Melee=Me
 ArmorSetBonus.Summon=S
 ItemName.LightArrow=光矢
+ProjectileName.FinalLightBak=光矢
 ItemName.ThunderBlade=电光雷鸣刃
-ItemName.SummonEvolutionaries=进化者召唤杖
-ItemName.ThunderWeaponMagic=雷电
+ProjectileName.Thunder=光电雷击
+ItemName.SummonEvolutionaries=进化者法杖
+ProjectileName.Evolutionaries=进化者
+ItemName.ThunderWeaponMagic=等离子雷击
+ProjectileName.ThunderMagic=等离子雷击
 ItemName.SLR=断裂号令剑
 ItemName.MtwerBP=流星雨爆发蓝图
-ItemName.Treestickblueprint=树叶魔杖蓝图
+ItemName.Treestickblueprint=魔法叶蓝图
 ItemName.FireThrow=火花喷射器
 ItemName.FireThrow2=熔岩喷射器
 ItemName.FireThrow3=霜焰喷射器
@@ -47,6 +54,11 @@ ItemName.FireThrow4=咒焰喷射器
 ItemName.FireThrow5=灵液喷射器
 ItemName.FireThrow6=蘑菇喷射器
 ItemName.FireThrow7=星旋喷射器
+ProjectileName.Fire1=霜焰
+ProjectileName.Fire2=咒焰
+ProjectileName.Fire3=灵液
+ProjectileName.Fire4=蘑菇焰
+ProjectileName.Fire5=星旋焰
 Starflare:=星辉：
 Corepower:=能量：
 cetip=能量能让你获得一些特殊效果
