--- a/Localization/zh-Hans.lang
+++ b/Localization/zh-Hans.lang
@@ -79,8 +79,8 @@ UI.RangeIndex1=范围指示器：激进
 UI.RangeIndex2=范围指示器：关闭
 UI.SpColorTrue=特殊颜色（彩蛋）：开
 UI.SpColorFalse=特殊颜色（彩蛋）：关
-UI.ExtraAITrue=额外AI：开
-UI.ExtraAIFalse=额外AI：关
+UI.ExtraAITrue=Boss战更改：开
+UI.ExtraAIFalse=Boss战更改：关
 Mega1=选择了额外弹药
 Mega2=单独选择了右侧额外弹药
 Mega3=清除了额外弹药
