--- a/Localization/zh-Hans.lang
+++ b/Localization/zh-Hans.lang
@@ -15,7 +15,9 @@ ItemName.Meteower=流星雨爆发
 ProjectileName.Meteower_Meteor=充能流星
 ItemName.LeavesWand=魔法叶
 ItemTooltip.Meteower=每次攻击施放15个充能流星\n流星可穿透敌人16点防御力
+ItemTooltip.MtwerBP=用于合成流星雨爆发
 ItemTooltip.LeavesWand=召唤跟踪的魔法叶刃攻击敌人
+ItemTooltip.Treestickblueprint=用于合成魔法叶
 ProjectileName.Magicblade=魔法叶刃
 ItemName.TimeTravelingPotion=回溯药水
 ItemTooltip.TimeTravelingPotion=回到两秒前\n四秒钟冷却时间\n默认快捷键：Q
@@ -32,10 +34,7 @@ ItemTooltip.SaviourRanged=远程伤害增加60%\n远程暴击率增加40%
 ItemTooltip.SaviourMagic=巨额防御\n魔法伤害增加40%\n魔法暴击率增加25%\n最大魔力增加120
 ItemTooltip.SaviourMelee=近战伤害和攻击速度增加20%\n近战暴击率增加20%
 ItemTooltip.SaviourSummon=巨额防御\n召唤物伤害增加40%\n最大召唤物数量增加7个
-ArmorSetBonus.Ranged=R
-ArmorSetBonus.Magic=Ma
-ArmorSetBonus.Melee=Me
-ArmorSetBonus.Summon=S
+SaviourBonus=\n额外伤害：每次攻击造成目标已损生命值一定比例的伤害\n生命偷取：每次攻击可以回复造成的伤害一定比例的生命
 ItemName.LightArrow=光矢
 ProjectileName.FinalLightBak=光矢
 ItemName.ThunderBlade=电光雷鸣刃
@@ -93,6 +92,9 @@ saviourstatus-1= 套装效果：额外伤害
 Talk.NewHistory01=新的历史中，没有你
 Talk.NewHistory02=新的历史中不再有你
 Talk.NewHistory03=新的历史中并没有你。
+Talk.StarCannonSP=“来试一下你”
+Talk.StarCannonSP1=“这样我就可以庄心地躲这个骷髅头”
+Talk.StarCannonSP2=“我星辰炮打不过骷髅王？”
 Talk.GoForTheEyes= 攻击要害！
 Talk.CritalAttacks= 致命一击！
 Talk.Attack03= 加大火力！
