--- a/Localization/zh-Hans.lang
+++ b/Localization/zh-Hans.lang
@@ -84,6 +84,11 @@ Mega1=选择了额外弹药
 Mega2=单独选择了右侧额外弹药
 Mega3=清除了额外弹药
 CannotTPto=目标位置不合法
+SpawnBasicChest=新的奖励箱已生成
+SpawnCorruptChest=新的腐化奖励箱已生成
+SpawnCrimsonChest=新的猩红奖励箱已生成
+SpawnJungleChest=新的丛林奖励箱已生成
+SpawnSpaceChest=新的天空奖励箱已生成
 ItemName.WdPlatGen=世界平台生成器
 ItemName.Throw2Brk=快速破坏
 ItemName.ClearByX=清除一行
@@ -95,6 +100,9 @@ Talk.NewHistory03=新的历史中并没有你。
 Talk.StarCannonSP=“来试一下你”
 Talk.StarCannonSP1=“这样我就可以庄心地躲这个骷髅头”
 Talk.StarCannonSP2=“我星辰炮打不过骷髅王？”
+Talk.findchest1=去下面看看吧
+Talk.findchest2=我闻到了，地下有宝藏的气味
+Talk.findchest3=试试往地下挖
 Talk.GoForTheEyes= 攻击要害！
 Talk.CritalAttacks= 致命一击！
 Talk.Attack03= 加大火力！
