--- a/Localization/zh-Hans.lang
+++ b/Localization/zh-Hans.lang
@@ -12,13 +12,16 @@ ProjectileName.UltimateStar=最终星辰
 ItemName.Lightning=转化增幅器
 ItemTooltip.Lightning=增加16%伤害\n增加8%暴击\n静止不动上述效果翻倍\n增加2召唤物上限\n增加100点最大生命值\n佩戴者移动速度大幅增加\n允许玩家双击同一方向以瞬移
 ItemName.Meteower=流星雨爆发
-ProjectileName.Meteower_Meteor=充能流星
-ItemName.LeavesWand=魔法叶
 ItemTooltip.Meteower=每次攻击施放15个充能流星\n流星可穿透敌人16点防御力
+ProjectileName.Meteower_Meteor=充能流星
 ItemTooltip.MtwerBP=用于合成流星雨爆发
+ItemName.LeavesWand=魔法叶
 ItemTooltip.LeavesWand=召唤跟踪的魔法叶刃攻击敌人
 ItemTooltip.Treestickblueprint=用于合成魔法叶
 ProjectileName.Magicblade=魔法叶刃
+ItemName.Oath=誓约
+ItemTooltip.Oath=释放穿透敌人的誓约之枪
+ProjectileName.OathProj=誓约之枪
 ItemName.TimeTravelingPotion=回溯药水
 ItemTooltip.TimeTravelingPotion=回到两秒前\n四秒钟冷却时间\n默认快捷键：Q
 NPCName.Core=革命性引擎核心
