--- a/Localization/zh-Hans.lang
+++ b/Localization/zh-Hans.lang
@@ -136,40 +136,45 @@ Talk.Dark01=真黑啊
 Talk.Dark02=伸手不见五指
 Talk.Dark03=你是谁？
 Talk.Dark04=你别过来
-Talk.SfWea1=看星星
-Talk.SfWea2=看星星喽
-Talk.SfWea3= 来看星星！
-Talk.SfWea4= 星光闪耀！
-Talk.SfWea5= 星光，闪耀！
-Talk.SfWea6=一闪一闪亮晶晶
-Talk.SfWea7= 汇聚星光！
-Talk.SfWea8= 燃起星辉！
-Talk.SfWea9=十步杀一人
-Talk.SfWea10=千里不留行
-Talk.SfWea11= 飒沓如流星！
-Talk.SfWea12=闪闪闪闪闪闪闪
-Talk.SfWea13= 继续看星星！
-Talk.SfWea14= 接着看星星！
-Talk.SfWea15= 再来看星星！
+Talk.SfWea0=看星星
+Talk.SfWea1=看星星喽
+Talk.SfWea2= 来看星星！
+Talk.SfWea3= 星光闪耀！
+Talk.SfWea4= 星光，闪耀！
+Talk.SfWea5= 汇聚星光！
+Talk.SfWea6= 燃起星辉！
+Talk.SfWea7= 飒沓如流星！
+Talk.SfWea8= 中断迷茫！
+Talk.SfWea9= 终结遗憾！
 Talk.Sparkle01=过去...我们犹如雨中泪水，消失了，不留一丝痕迹
-Talk.Sparkle02= 这......就是“新的历史”吗？
-Talk.Sparkle03=太慢了。你应该再请教请教琅
-Talk.Sparkle04= 璇没有教过你这个吗？
-Talk.Sparkle05=看来你没有听珖的建议
-Talk.Sparkle06=改天再试试
-Talk.Sparkle07= 换个新把戏！
-Talk.Sparkle08=汇聚星光一一
-Talk.Sparkle09=聚集星辉一一
-Talk.Sparkle10= 燃起星辉！
-Talk.Sparkle11= 燃起最后一颗星！
-Talk.Sparkle12= 燃尽最后一颗星！
-Talk.Sparkle13=我比你更强
-Talk.Sparkle14=你无法击败我
-Talk.Sparkle15=你不用知道我是谁。如果你坚持要问
-Talk.Sparkle16=我只能说，我的名字，是璨
-Talk.Sparkle17=你们会嘲笑我们吧？这其实无所谓。
-Talk.Sparkle18= 一定，一定要慎用月亮的力量！
-Talk.Sparkle19= 月亮上的那些人......不可接触。
+Talk.Sparkle02=那时...前一刻晴空中仍有太阳朗照
+Talk.Sparkle03=后一刻却被月亮遮蔽，不复光明
+Talk.Sparkle04=世界墨黑
+Talk.Sparkle05=我们由此失去了光
+Talk.Sparkle06=一一老师说
+Talk.Sparkle07=“光是能源”
+Talk.Sparkle08=“光也是信仰”
+Talk.Sparkle09=“光更是生命”
+Talk.Sparkle10=我们依靠光生存
+Talk.Sparkle11=我们依靠光生活
+Talk.Sparkle12=我们依靠光
+Talk.Sparkle13=光给了......我是谁？
+Talk.Sparkle14=我是璨
+Talk.Sparkle15=璨是明亮的意思
+Talk.Sparkle16=借助今夜的星辉，你可以操控自己的重力了
+Talk.Sparkle17=星辰之光是我们最后的力量
+Talk.Sparkle18=从光中汲取力量是我们的能力
+Talk.Sparkle19=你们也用光吗？
+Talk.Sparkle30=琅曾让我注重过速度
+Talk.Sparkle31= 璇没有教过你这个吗？
+Talk.Sparkle32=珖告诉过我这么做是不对的
+Talk.Sparkle33=改天再试试
+Talk.Sparkle34= 换个新把戏！
+Talk.Sparkle41=汇聚星光一一
+Talk.Sparkle42=聚集星辉一一
+Talk.Sparkle43= 燃起星辉！
+Talk.Sparkle44= 燃起最后一颗星！
+Talk.Sparkle45= 燃尽最后一颗星！
 Talk.Sparkle20= 中断迷茫！
 Talk.Sparkle21= 终结遗憾！
 Talk.Sparkle22=快要结束了......
