--- a/Localization/en-US.lang
+++ b/Localization/en-US.lang
@@ -11,6 +11,7 @@ Mega1=Chosen the expanded ammunition
 Mega2=Individually chosen thr right ammunition
 Mega3=Cleared the expanded ammunition
 CannotTPto=Invalid target position
+BluePrint=Right click to study
 Talk.NewHistory01=You will no longer in the new history
 Talk.NewHistory02=You will no longer in the new history!
 Talk.NewHistory03=You are no longer in the new history
