--- a/Localization/zh-Hans.lang
+++ b/Localization/zh-Hans.lang
@@ -11,13 +11,12 @@ ItemTooltip.Ultimate_Star=集星辉以为子弹，穿透一切敌人
 ProjectileName.UltimateStar=最终星辰
 ItemName.Lightning=转化增幅器
 ItemTooltip.Lightning=增加16%伤害\n增加8%暴击\n静止不动上述效果翻倍\n增加2召唤物上限\n增加100点最大生命值\n佩戴者移动速度大幅增加\n允许玩家双击同一方向以瞬移
+BluePrint=右键点击可学习
 ItemName.Meteower=流星雨爆发
-ItemTooltip.Meteower=每次攻击施放15个充能流星\n流星可穿透敌人16点防御力
+ItemTooltip.Meteower=每次攻击施放15个充能流星\n流星可穿透敌人19点防御力
 ProjectileName.Meteower_Meteor=充能流星
-ItemTooltip.MtwerBP=用于合成流星雨爆发
 ItemName.LeavesWand=魔法叶
 ItemTooltip.LeavesWand=召唤跟踪的魔法叶刃攻击敌人
-ItemTooltip.Treestickblueprint=用于合成魔法叶
 ProjectileName.Magicblade=魔法叶刃
 ItemName.Oath=誓约
 ItemTooltip.Oath=释放穿透敌人的誓约之枪
@@ -100,6 +99,7 @@ saviourstatus-1= 套装效果：额外伤害
 Talk.NewHistory01=新的历史中，没有你
 Talk.NewHistory02=新的历史中不再有你
 Talk.NewHistory03=新的历史中并没有你。
+Prefix.Piercing=穿孔
 Talk.StarCannonSP=“来试一下你”
 Talk.StarCannonSP1=“这样我就可以庄心地躲这个骷髅头”
 Talk.StarCannonSP2=“我星辰炮打不过骷髅王？”
